# ANN_BP

./: CMakeLists.txt  README.md  main.cpp
include/: ANN_BP_Enums.h  ANN_BP_Layer.h  ANN_BP_Link.h  ANN_BP_Network.h  ANN_BP_Node.h
src/: ANN_BP_Link.cpp  ANN_BP_Node.cpp
